[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/GameOptions.gd" type="Script" id=1]

[node name="GameOptions" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="."]
margin_right = 1120.0
margin_bottom = 14.0
text = "Music"
align = 1

[node name="MusicVolume" type="HSlider" parent="."]
margin_top = 18.0
margin_right = 1120.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="."]
margin_top = 38.0
margin_right = 1120.0
margin_bottom = 52.0
text = "Effects"
align = 1

[node name="SFXVolume" type="HSlider" parent="."]
margin_top = 56.0
margin_right = 1120.0
margin_bottom = 72.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckbox" type="CheckButton" parent="."]
margin_left = 483.0
margin_top = 76.0
margin_right = 637.0
margin_bottom = 116.0
size_flags_horizontal = 4
text = "  Fullscreen"

[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="toggled" from="FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
